force-app/main/default/objects/Transit_Card_Inventory__c/Transit_Card_Inventory__c.object-meta.xml
<CustomObject>
    <label>Supportive Services Inventory</label>
    <nameField>
        <displayFormat>Inventory-{0000}</displayFormat>
        <label>Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supportive Services Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>