force-app/main/default/objects/Transit_Card_Inventory__c/fields/Distribution_Status__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Status__c</fullName>
    <formula>if (Number_of_Distributed_Cards__c + Number_of_Write_Offs__c = Total_Number_of_Transit_Cards_Purchased__c, &quot;Complete&quot;, 

if (Number_of_Distributed_Cards__c  = 0, &quot;Not Yet Started&quot;, 

if (Number_of_Undistributed_Cards__c &gt; 0 &amp;&amp; Number_of_Undistributed_Cards__c &lt; Total_Number_of_Transit_Cards_Purchased__c, &quot;In Progress&quot;, 

if (Number_of_Undistributed_Cards__c = 0 , &quot;Complete&quot;, 

NULL))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distribution Status</label>
    <type>Text</type>
</CustomField>