force-app/main/default/objects/Transit_Card_Inventory__c/fields/Inventory_Location__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Location__c</fullName>
    <label>Inventory Location</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Downtown</fullName>
            </value>
            <value>
                <fullName>South Side</fullName>
            </value>
            <value>
                <fullName>Cleanslate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>