force-app/main/default/objects/Transit_Card_Inventory__c/fields/Number_of_Distributed_Cards__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Distributed_Cards__c</fullName>
    <label>Number of Distributed Cards</label>
    <summaryFilterItems>
        <field>Transit_Card_Distribution__c.Participant__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Transit_Card_Distribution__c.Transit_Card_Inventory__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>