force-app/main/default/objects/Transit_Card_Inventory__c/fields/Number_of_Undistributed_Cards__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Undistributed_Cards__c</fullName>
    <formula>Total_Number_of_Transit_Cards_Purchased__c - Number_of_Distributed_Cards__c - Number_of_Write_Offs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Undistributed Cards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>