force-app/main/default/objects/Transit_Card_Inventory__c/fields/Number_of_Write_Offs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Write_Offs__c</fullName>
    <label>Number of Write Offs</label>
    <summaryFilterItems>
        <field>Transit_Card_Distribution__c.Write_Off__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Transit_Card_Distribution__c.Transit_Card_Inventory__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>