force-app/main/default/objects/Transit_Card_Inventory__c/fields/Total_Amount_of_Transit_Cards_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_Transit_Cards_Purchased__c</fullName>
    <formula>Transit_Card_Value__c * Total_Number_of_Transit_Cards_Purchased__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Cards Purchased</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>