force-app/main/default/objects/Transit_Card_Inventory__c/fields/Total_Number_of_Transit_Cards_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Transit_Cards_Purchased__c</fullName>
    <label>Total Number of Cards Purchased</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>