force-app/main/default/objects/Transit_Card_Inventory__c/fields/Transit_Card_Order__c.field-meta.xml
<CustomField>
    <fullName>Transit_Card_Order__c</fullName>
    <formula>text(Transit_Card_Type__c) &amp; &quot;, &quot; &amp; text(Order_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Card Order</label>
    <type>Text</type>
</CustomField>