force-app/main/default/objects/Transit_Card_Inventory__c/fields/Transit_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Transit_Card_Type__c</fullName>
    <inlineHelpText>CTA price change took effect in June 2021.</inlineHelpText>
    <label>Card Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7 Day</fullName>
            </value>
            <value>
                <fullName>3 Day</fullName>
            </value>
            <value>
                <fullName>1 Day</fullName>
            </value>
            <value>
                <fullName>Ventra/Pace</fullName>
            </value>
            <value>
                <fullName>Ventra/Other Amount</fullName>
            </value>
            <value>
                <fullName>Gift Card - $250</fullName>
            </value>
            <value>
                <fullName>Gift Card - $125</fullName>
            </value>
            <value>
                <fullName>Ventra/CTA</fullName>
                <isActive>false</isActive>
                <label>Ventra/CTA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>