force-app/main/default/objects/Transit_Card_Inventory__c/fields/Transit_Card_Value__c.field-meta.xml
<CustomField>
    <fullName>Transit_Card_Value__c</fullName>
    <formula>IF(ISPICKVAL(Transit_Card_Type__c, &quot;Gift Card - $250&quot;), 250.00, 

if (ISPICKVAL(Transit_Card_Type__c, &quot;Gift Card - $125&quot;), 125.00,

if (Order_Date__c &gt;= DATE(2021,6,1) &amp;&amp; ispickval(Transit_Card_Type__c, &quot;7 Day&quot;), 20.50, 

if (Order_Date__c &gt;= DATE(2021,6,1) &amp;&amp; ispickval(Transit_Card_Type__c, &quot;3 Day&quot;), 15.00, 

if (Order_Date__c &gt;= DATE(2021,6,1) &amp;&amp; ispickval(Transit_Card_Type__c, &quot;1 Day&quot;), 5.50, 

if (Order_Date__c &gt;= DATE(2021,6,1) &amp;&amp; ispickval(Transit_Card_Type__c, &quot;Ventra/Pace&quot;), 25.00,

if (Order_Date__c &gt;= DATE(2021,6,1) &amp;&amp; ispickval(Transit_Card_Type__c, &quot;Ventra/CTA&quot;), 28.00, 

if (Order_Date__c &lt; DATE(2021,6,1) &amp;&amp; ispickval(Transit_Card_Type__c, &quot;7 Day&quot;), 28.50, 

if (Order_Date__c &lt; DATE(2021,6,1) &amp;&amp; ispickval(Transit_Card_Type__c, &quot;3 Day&quot;), 20.50, 

if (Order_Date__c &lt; DATE(2021,6,1) &amp;&amp; ispickval(Transit_Card_Type__c, &quot;1 Day&quot;), 10.00, 

if (Order_Date__c &lt; DATE(2021,6,1) &amp;&amp; ispickval(Transit_Card_Type__c, &quot;Ventra/Pace&quot;), 33.00,

if (Order_Date__c &lt; DATE(2021,6,1) &amp;&amp; ispickval(Transit_Card_Type__c, &quot;Ventra/CTA&quot;), 28.00, 

Ventra_Reload_Amount__c))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Card Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>