force-app/main/default/objects/Transit_Card_Inventory__c/fields/Ventra_Reload_Amount__c.field-meta.xml
<CustomField>
    <fullName>Ventra_Reload_Amount__c</fullName>
    <inlineHelpText>If selecting &quot;Ventra/Other Amount&quot; as the Card Type, please enter the corresponding reload amount in this field.</inlineHelpText>
    <label>Reload Amount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>