force-app/main/default/objects/Transit_Card_Inventory__c/recordTypes/Gift_Card.recordType-meta.xml
<RecordType>
    <fullName>Gift_Card</fullName>
    <active>true</active>
    <label>Gift Card</label>
</RecordType>