force-app/main/default/objects/Transit_Card_Inventory__c/recordTypes/Transit_Card.recordType-meta.xml
<RecordType>
    <fullName>Transit_Card</fullName>
    <active>true</active>
    <label>Transit Card</label>
</RecordType>